@@ -1,4 +1,4 @@
-MANIFEST for byacc, version t20140403-gcov
+MANIFEST for byacc, version t20140404-gcov
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 ACKNOWLEDGEMENTS                original version of byacc - 1993
